Improve security and fix UI issues
Security improvements:
- Moved admin passcode validation to backend API (passcode never exposed to client)
- Admin passcode (000000) now stored securely on server
- Display passcode validation uses backend API
- Passcodes cannot be found via inspect or client-side code

UI/UX fixes:
- Fixed display.html to not show error when no players exist
- Timer only shows when admin sets visibility to 'show'
- Timer locks voting immediately at 0:00 (not 1 second after)
- Removed top padding from player tiles grid in voting page

Technical changes:
- Changed Math.ceil to Math.floor for timer to prevent delay
- Removed error overlay for empty player states
- Updated CSS padding: 0 15px 15px 15px for players-grid

--- a/public/display.html
+++ b/public/display.html
@@ -760,11 +760,8 @@
                 }
             } catch (error) {
                 console.error('Error updating display results:', error);
-                const displayLocked = document.getElementById('displayLocked');
-                const h1 = displayLocked.querySelector('h1');
-                const p = displayLocked.querySelector('p');
-                h1.textContent = 'ERROR';
-                p.textContent = 'Failed to load results';
+                // Don't show error to users - just log it
+                // If there's truly no data, we'll just show nothing
             }
         }
 
