Enable automatic polling to reflect admin changes instantly
- Enabled 2-second polling in display.html for automatic updates
- Enhanced voting.html polling to detect:
  * Player count changes (adding/removing players)
  * Round changes
  * Voting mode changes
  * Voting lock state changes
- Pages now automatically refresh when admin makes changes
- No manual refresh required for contestants or display screens

--- a/public/display.html
+++ b/public/display.html
@@ -481,9 +481,10 @@
             document.getElementById('passcodeContainer').style.display = 'none';
             document.getElementById('displayScreen').classList.add('active');
 
-            // Load data once (polling disabled for testing)
+            // Load data initially
             loadDisplayData();
-            // TEMPORARILY DISABLED: setInterval(loadDisplayData, 2000);
+            // Auto-refresh every 2 seconds to reflect admin changes
+            setInterval(loadDisplayData, 2000);
         }
 
         /**
