Auto-show timer when starting voting
When admin clicks Start Voting, automatically set timerVisibility to 'show' so timer appears on voting page without requiring manual setting change.

--- a/public/admin.html
+++ b/public/admin.html
@@ -1586,7 +1586,8 @@
                 // Update Firebase
                 await updateGameConfig({
                     votingLocked: newLockedState,
-                    timerStartTime: newLockedState ? null : getSyncedTime()
+                    timerStartTime: newLockedState ? null : getSyncedTime(),
+                    timerVisibility: newLockedState ? 'hide' : 'show'
                 });
 
                 // Update UI
