--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
         </div>
     </div>
 
-    <script src="/js/auth.js"></script>
+    <script src="/js/auth.js?v=2"></script>
     <script>
         // Passcode input formatting
         const passcodeInput = document.getElementById('passcode');
