--- a/public/admin.html
+++ b/public/admin.html
@@ -1203,7 +1203,7 @@
         </div>
     </div>
 
-    <script src="/js/auth.js"></script>
+    <script src="/js/auth.js?v=2"></script>
     <script src="/js/data.js"></script>
     <script src="/js/time-sync.js"></script>
     <script>
